# ddi-questionnaire-modeling

./: 404.html  README.md  build.sh  index.html  pyproject.toml  serve.sh  sitemap.xml
.github/workflows/: build_and_deploy.yaml
check/: index.html
derived-variable/: index.html
filter/: index.html
loop/: index.html
mandatory-question/: index.html
parameters/: index.html
question-bank/: index.html
question-bank/dynamic-table/: index.html
question-bank/misc/: index.html
question-bank/unique-choice-question/: index.html
roundabout/: index.html
sourcedocs/: mkdocs.yml
sourcedocs/docs/: index.md
sourcedocs/docs/check/: index.md
sourcedocs/docs/derived-variable/: index.md
sourcedocs/docs/filter/: index.md
sourcedocs/docs/loop/: index.md
sourcedocs/docs/mandatory-question/: index.md
sourcedocs/docs/parameters/: index.md
sourcedocs/docs/question-bank/: dynamic-table.md  index.md  misc.md  unique-choice-question.md
sourcedocs/docs/roundabout/: index.md
sourcedocs/docs/statements/: index.md
sourcedocs/docs/structure/: index.md
sourcedocs/docs/update/: index.md
sourcedocs/docs/variable/: index.md
statements/: index.html
structure/: index.html
update/: index.html
variable/: index.html
