[tool.poetry]
name = "ddi-questionnaire-modeling"
version = "0.1.0"
description = ""
authors = ["romaintailhurat <romain.tailhurat@gmail.com>"]
readme = "README.md"
packages = [{ include = "ddi_questionnaire_modeling" }]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.5"
mkdocs-glightbox = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
